# MASt3R-SLAM

./: .gitignore  check_tum_duplicate_timestamps.py  main.py  pyproject.toml  setup.py
config/: eval_calib.yaml  eval_no_calib.yaml
mast3r_slam/: dataloader.py  evaluate.py
mast3r_slam/backend/src/: gn_kernels.cu  matching_kernels.cu
scripts/: eval_euroc.sh  eval_insta.sh
